--- a/app/views/spaces/_form.html.slim
+++ b/app/views/spaces/_form.html.slim
@@ -30,6 +30,8 @@
   div style="margin-left: 15px;"
     = link_to_add_fields "Add Image", f, :images
 
+    = recaptcha_tags
+
   div.form-group  style="margin-left: 15px; margin-top:30px;"
     = f.submit  "List Space", class: 'btn btn-success'
 
