--- a/app/views/layouts/_modal_for_request_for_space.html.erb
+++ b/app/views/layouts/_modal_for_request_for_space.html.erb
@@ -6,9 +6,7 @@
         <h4 class="modal-title" id="myModalLabel" style="text-align:center">Request a Space</h4>
         <p style="text-align:center;">We'll match you with a listing or email you when one becomes available.</p>
       </div>
-      <div class="modal-body">
-          <% @space_request = SpaceRequest.new  %>
-          <%= render 'space_requests/form' %>
+      <div class="modal-body" id="requestASpaceContent">
       </div>
     </div>
   </div>
