--- a/app/views/spaces/_form.html.slim
+++ b/app/views/spaces/_form.html.slim
@@ -30,7 +30,7 @@
   div style="margin-left: 15px;"
     = link_to_add_fields "Add Image", f, :images
 
-    = recaptcha_tags
+    = recaptcha_tags(display: {theme: 'clean'}, ajax: true)
 
   div.form-group  style="margin-left: 15px; margin-top:30px;"
     = f.submit  "List Space", class: 'btn btn-success'
