--- a/app/views/spaces/new.js.erb
+++ b/app/views/spaces/new.js.erb
@@ -1,4 +1,11 @@
+
 $("#requestASpaceContent").html("");
+$("#postANewSpaceContent").html("");
+$("#contactOnwerContent").html("");
+
+
 $("#postANewSpaceContent").html("<%= escape_javascript(render 'spaces/form')%> ");
 $('.selectpicker').selectpicker();
 $("#postANewSpace").modal();
+
+
