--- a/app/views/spaces/show.html.slim
+++ b/app/views/spaces/show.html.slim
@@ -14,8 +14,8 @@
     h4.description
       = @space.description
 
-    button class="btn btn-primary" data-toggle="modal" data-target="#contactOnwer" style="margin-top: 10px; "
-      'CONTACT OWNER
+
+    = link_to "CONTACT OWNER", new_space_tenant_response_path(@space), remote: true, class: "btn btn-primary", style: "margin-top: 10px;"
 
 
     div style="margin-button:50px;"
