--- a/app/views/tenant_responses/_form.html.slim
+++ b/app/views/tenant_responses/_form.html.slim
@@ -14,7 +14,7 @@
     = f.label :email
     = f.email_field :email, class: 'form-control', placeholder: "Email", :required => true
 
-    = recaptcha_tags
+    = recaptcha_tags(display: {theme: 'clean'}, ajax: true)
 
   div.form-group  style="margin-left: 15px; margin-top:30px;"
 
