--- a/app/views/tenant_responses/_modal_for_contact_owner.html.erb
+++ b/app/views/tenant_responses/_modal_for_contact_owner.html.erb
@@ -5,8 +5,8 @@
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
         <h4 class="modal-title" id="myModalLabel" style="text-align:center">Contact Owner</h4>
       </div>
-      <div class="modal-body">
-          <%= render 'tenant_responses/form' %>
+      <div class="modal-body" id="contactOnwerContent">
+
       </div>
     </div>
   </div>
