--- a/app/views/spaces/show.html.slim
+++ b/app/views/spaces/show.html.slim
@@ -21,7 +21,7 @@
     div style="margin-button:50px;"
     br
     br
-      = render 'spaces/images', space: @space if @space.images.present?
+      = render 'spaces/images', space: @space
 
 
   .col-lg-2.sidebar
