--- a/app/views/spaces/_images.html.erb
+++ b/app/views/spaces/_images.html.erb
@@ -1,26 +1,29 @@
+<% unless @space.images_count == 0 %>
+  <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+      <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+      <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    </ol>
 
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-  </ol>
-
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner">
-    <% @space.images.each_with_index do |image, index| %>
-    <div class="item <%= "active" if index == 0 %>">
-      <%= image_tag image.file.url %>
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+      <% @space.images.each_with_index do |image, index| %>
+      <div class="item <%= "active" if index == 0 %>">
+        <%= image_tag image.file.url %>
+      </div>
+      <% end %>
     </div>
-    <% end %>
-  </div>
 
-  <!-- Controls -->
-  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
-  </a>
-  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
-  </a>
-</div>
+    <!-- Controls -->
+    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+    </a>
+    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+    </a>
+  </div>
+<% else %>
+  <%= image_tag 'default_image.gif', size: "500x500", alt: "No image Available" %>
+<% end %>
